Chore(quality): 接入规约检查并清理无效代码